[metadata]
name = pylint_reenable
version = 0.1.0
description = Automatically remove unnecessary `# pylint-disable` comments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/pylint-reenable
author = Marco Gorelli
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = pylint-reenable
install_requires =
    pylint
    tokenize-rt>=2.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pylint-reenable = pylint_reenable:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
